<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_search_text_default"
        android:inputType="text"
        android:key="@string/settings_search_text_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_text_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
</PreferenceScreen>
